@@ -10,7 +10,7 @@ INCS = $(ROOTSYS)/include/ $(PWD)/tclap-1.2.1/include/ .
 	@echo "*"
 	$(CXX) $(CFLAGS) $(addprefix -I, $(INCS)) -c $< -o $@
 
-sectorMaker:main.o rates.o sector.o jobparams.o 
+sectorMaker:main.o rates.o sector.o sector_test.o jobparams.o 
 	@echo "Build sectorMaker tool" 
 	$(LD) $^ $(shell $(ROOTSYS)/bin/root-config --libs) -o $@
 
