@@ -1,3 +1,10 @@
+2013-05-28  Seb Viret  <viret@in2p3.fr>
+ 
+       	* Added sector efficiency calculator 
+	  to the SectorMaker
+
+	This version has been tested against CMSSW_6_1_2_SLHC2
+
 2013-05-24  Seb Viret  <viret@in2p3.fr>
  
        	* Added a the MakeRatesGraphs.C macro in 
